feat(security): add sanitized audit logging and centralize Maximo proxy handling