@@ -2,12 +2,20 @@ package com.ess.controller;
 
 import com.ess.security.JwtKeyProvider;
 import io.jsonwebtoken.Claims;
+import io.jsonwebtoken.JwtException;
 import io.jsonwebtoken.Jws;
 import io.jsonwebtoken.Jwts;
-import io.jsonwebtoken.SignatureException;
-import okhttp3.*;
-import java.util.concurrent.TimeUnit;
-
+import okhttp3.ConnectionSpec;
+import okhttp3.HttpUrl;
+import okhttp3.MediaType;
+import okhttp3.OkHttpClient;
+import okhttp3.Request;
+import okhttp3.Response;
+import okhttp3.ResponseBody;
+import okhttp3.TlsVersion;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -21,68 +29,74 @@ import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.io.IOException;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
+import java.util.Objects;
+import java.util.concurrent.TimeUnit;
 
 /**
- * 
- * @author M.Alayoubi
- *         ip:8080/api/token -> access token (OAuth2 Client Credentials)
- * 
+ * Issues OAuth2 client-credentials tokens and proxies authenticated requests to
+ * the configured Maximo script endpoints.
  */
 @RestController
 @RequestMapping("/api")
 public class TokenController {
+
+    private static final Logger LOGGER = LoggerFactory.getLogger(TokenController.class);
+    private static final long EXPIRATION_TIME = 30 * 60 * 1000;
+    private static final MediaType JSON_MEDIA_TYPE = MediaType.parse("application/json");
 
     private final String configuredClientId;
     private final String configuredClientSecret;
     private final String maximoApiKey;
     private final HttpUrl maximoScriptBaseUrl;
     private final JwtKeyProvider jwtKeyProvider;
+    private final OkHttpClient httpClient;
 
-    private static final long EXPIRATION_TIME = 30 * 60 * 1000; // 30 minutes in milliseconds
-    private final OkHttpClient httpClient = createHttpClient();
-
+    @Autowired
     public TokenController(
             @Value("${app.oauth.client-id}") String configuredClientId,
             @Value("${app.oauth.client-secret}") String configuredClientSecret,
             @Value("${app.maximo.script-base-url}") String maximoScriptBaseUrl,
             @Value("${app.maximo.api-key}") String maximoApiKey,
             JwtKeyProvider jwtKeyProvider) {
+        this(
+                configuredClientId,
+                configuredClientSecret,
+                parseMaximoScriptBaseUrl(maximoScriptBaseUrl),
+                maximoApiKey,
+                jwtKeyProvider,
+                createHttpClient());
+    }
+
+    TokenController(
+            String configuredClientId,
+            String configuredClientSecret,
+            HttpUrl maximoScriptBaseUrl,
+            String maximoApiKey,
+            JwtKeyProvider jwtKeyProvider,
+            OkHttpClient httpClient) {
         this.configuredClientId = requireConfiguration("OAUTH_CLIENT_ID", configuredClientId);
         this.configuredClientSecret = requireConfiguration("OAUTH_CLIENT_SECRET", configuredClientSecret);
         this.maximoApiKey = requireConfiguration("MAXIMO_API_KEY", maximoApiKey);
-        this.maximoScriptBaseUrl = parseMaximoScriptBaseUrl(maximoScriptBaseUrl);
-        this.jwtKeyProvider = jwtKeyProvider;
-    }
-
-    private Jws<Claims> parseToken(String token) {
-        if (token.startsWith("Bearer ")) {
-            token = token.substring(7);
-        }
-        return Jwts.parser()
-                .setSigningKey(jwtKeyProvider.publicKey())
-                .parseClaimsJws(token);
-    }
-
-    private ResponseEntity<String> unauthorizedTokenResponse() {
-        return ResponseEntity.status(HttpStatus.UNAUTHORIZED)
-                .body("Invalid token. You need to generate a new token.");
+        this.maximoScriptBaseUrl = Objects.requireNonNull(maximoScriptBaseUrl, "maximoScriptBaseUrl");
+        this.jwtKeyProvider = Objects.requireNonNull(jwtKeyProvider, "jwtKeyProvider");
+        this.httpClient = Objects.requireNonNull(httpClient, "httpClient");
     }
 
     /**
-     * OAuth2 Client Credentials Token Endpoint
-     * Accepts client_id & client_secret via form parameters, query params, or JSON body.
+     * OAuth2 client-credentials endpoint. Credentials may be supplied as form,
+     * query, or JSON parameters for backward compatibility.
      */
     @PostMapping(value = "/token", consumes = org.springframework.http.MediaType.ALL_VALUE)
     public ResponseEntity<?> token(
             @RequestParam Map<String, String> allParams,
             @RequestBody(required = false) String rawBody) {
-
         String clientId = allParams.get("client_id");
         String clientSecret = allParams.get("client_secret");
 
-        if ((clientId == null || clientSecret == null) && rawBody != null && !rawBody.trim().isEmpty()) {
+        if ((clientId == null || clientSecret == null) && rawBody != null && !rawBody.isBlank()) {
             try {
                 com.google.gson.JsonObject json = com.google.gson.JsonParser.parseString(rawBody).getAsJsonObject();
                 if (clientId == null && json.has("client_id")) {
@@ -91,22 +105,21 @@ public class TokenController {
                 if (clientSecret == null && json.has("client_secret")) {
                     clientSecret = json.get("client_secret").getAsString();
                 }
-            } catch (Exception ignored) {
+            } catch (RuntimeException ignored) {
+                // The response below deliberately does not expose JSON parsing details.
             }
         }
 
         if (clientId == null || clientSecret == null) {
-            Map<String, String> err = new HashMap<>();
-            err.put("error", "invalid_request");
-            err.put("error_description", "client_id and client_secret are required.");
-            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(err);
+            LOGGER.warn("event=oauth_token outcome=denied reason=missing_credentials");
+            return ResponseEntity.status(HttpStatus.UNAUTHORIZED)
+                    .body(errorResponse("invalid_request", "client_id and client_secret are required."));
         }
 
         if (!configuredClientId.equals(clientId) || !configuredClientSecret.equals(clientSecret)) {
-            Map<String, String> err = new HashMap<>();
-            err.put("error", "invalid_client");
-            err.put("error_description", "Invalid client_id or client_secret.");
-            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(err);
+            LOGGER.warn("event=oauth_token outcome=denied reason=invalid_credentials");
+            return ResponseEntity.status(HttpStatus.UNAUTHORIZED)
+                    .body(errorResponse("invalid_client", "Invalid client_id or client_secret."));
         }
 
         Map<String, Object> claims = new HashMap<>();
@@ -120,825 +133,198 @@ public class TokenController {
                 .signWith(io.jsonwebtoken.SignatureAlgorithm.RS256, jwtKeyProvider.privateKey())
                 .compact();
 
+        LOGGER.info("event=oauth_token outcome=success");
+
         Map<String, Object> response = new HashMap<>();
-        // response.put("access_token", token);
         response.put("token_type", "Bearer");
         response.put("expires_in", EXPIRATION_TIME / 1000);
-        response.put("token", token); // Backward compatibility key
-        response.put("expiry", "" + EXPIRATION_TIME);
+        response.put("token", token);
+        response.put("expiry", Long.toString(EXPIRATION_TIME));
         return ResponseEntity.ok(response);
     }
 
-    /**
-     * 
-     * @param token
-     * @return
-     */
     @GetMapping("/validate-token")
     public String validateToken(@RequestHeader("Authorization") String token) {
         try {
             Claims claims = parseToken(token).getBody();
-
-            // Token is valid, return "Hello World"
+            LOGGER.info("event=token_validation outcome=success");
             return "The Token is valid for user: " + claims.get("username");
-
-        } catch (SignatureException | io.jsonwebtoken.ExpiredJwtException e) {
-            // Token is invalid or expired
-            throw new RuntimeException("Invalid token. You need to generate a new token.");
+        } catch (JwtException | IllegalArgumentException exception) {
+            LOGGER.warn("event=token_validation outcome=denied");
+            throw new InvalidTokenException();
         }
     }
 
-    /**
-     * 
-     * @param user
-     * @return
-     *         ip:8080/api/CBSAPI
-     */
+    private ResponseEntity<?> forwardToMaximo(String scriptName, String token, String reqBody) {
+        try {
+            parseToken(token);
+        } catch (JwtException | IllegalArgumentException exception) {
+            LOGGER.warn("event=maximo_proxy script={} outcome=denied reason=invalid_token", scriptName);
+            return unauthorizedTokenResponse();
+        }
+
+        okhttp3.RequestBody body = okhttp3.RequestBody.create(JSON_MEDIA_TYPE, reqBody);
+        Request request = createMaximoRequest(scriptName, body);
+
+        try (Response response = httpClient.newCall(request).execute()) {
+            int status = response.code();
+            ResponseBody responseBody = response.body();
+            String payload = responseBody == null ? "" : responseBody.string();
+
+            if (response.isSuccessful()) {
+                LOGGER.info("event=maximo_proxy script={} outcome=success status={}", scriptName, status);
+                return ResponseEntity.ok(payload);
+            }
+
+            LOGGER.warn("event=maximo_proxy script={} outcome=upstream_error status={}", scriptName, status);
+            return ResponseEntity.status(status).body(payload);
+        } catch (IOException exception) {
+            LOGGER.error(
+                    "event=maximo_proxy script={} outcome=transport_error exception_type={}",
+                    scriptName,
+                    exception.getClass().getSimpleName());
+            return ResponseEntity.status(HttpStatus.BAD_GATEWAY)
+                    .body(errorResponse("upstream_unavailable", "Unable to contact the upstream service."));
+        }
+    }
+
     @PostMapping("/CBSAPI")
     public ResponseEntity<?> cbsApi(@RequestHeader("Authorization") String token, @RequestBody String reqBody) {
-        try {
-            Jws<Claims> claims = parseToken(token);
-            claims.getSignature();
-
-            // Create the request body with JSON content
-            okhttp3.RequestBody body = okhttp3.RequestBody.create(
-                    MediaType.parse("application/json"),
-                    reqBody);
-
-            // Build the request
-            Request request = createMaximoRequest("CBSAPI", body);
-
-            // Execute the request
-            Response response = httpClient.newCall(request).execute();
-
-            if (response.isSuccessful()) {
-                return ResponseEntity.ok(response.body().string());
-            } else {
-                // Return an error message if the request failed
-                return ResponseEntity.status(response.code())
-                        .body(response.body().string());
-            }
-        } catch (SignatureException | io.jsonwebtoken.ExpiredJwtException e) {
-            // Token is invalid or expired
-            return unauthorizedTokenResponse();
-        } catch (IOException e) {
-            return ResponseEntity.status(500).body(e.getMessage());
-        }
+        return forwardToMaximo("CBSAPI", token, reqBody);
     }
 
-    /**
-     * 
-     * @param user
-     * @return
-     */
     @PostMapping("/ITEMAPI")
     public ResponseEntity<?> itemApi(@RequestHeader("Authorization") String token, @RequestBody String reqBody) {
-        try {
-            Jws<Claims> claims = parseToken(token);
-            claims.getSignature();
-
-            // Create the request body with JSON content
-            okhttp3.RequestBody body = okhttp3.RequestBody.create(
-                    MediaType.parse("application/json"),
-                    reqBody);
-
-            // Build the request
-            Request request = createMaximoRequest("ITEMAPI", body);
-
-            // Execute the request
-            Response response = httpClient.newCall(request).execute();
-
-            if (response.isSuccessful()) {
-                return ResponseEntity.ok(response.body().string());
-            } else {
-                // Return an error message if the request failed
-                return ResponseEntity.status(response.code())
-                        .body(response.body().string());
-            }
-        } catch (SignatureException | io.jsonwebtoken.ExpiredJwtException e) {
-            // Token is invalid or expired
-            return unauthorizedTokenResponse();
-        } catch (IOException e) {
-            return ResponseEntity.status(500).body(e.getMessage());
-        }
+        return forwardToMaximo("ITEMAPI", token, reqBody);
     }
 
-    /**
-     * 
-     * @param user
-     * @return
-     */
     @PostMapping("/MATUSETRANSAPI")
     public ResponseEntity<?> MatusetransApi(@RequestHeader("Authorization") String token, @RequestBody String reqBody) {
-        try {
-            Jws<Claims> claims = parseToken(token);
-            claims.getSignature();
-
-            // Create the request body with JSON content
-            okhttp3.RequestBody body = okhttp3.RequestBody.create(
-                    MediaType.parse("application/json"),
-                    reqBody);
-
-            // Build the request
-            Request request = createMaximoRequest("MATUSETRANSAPI", body);
-
-            // Execute the request
-            Response response = httpClient.newCall(request).execute();
-
-            if (response.isSuccessful()) {
-                return ResponseEntity.ok(response.body().string());
-            } else {
-                // Return an error message if the request failed
-                return ResponseEntity.status(response.code())
-                        .body(response.body().string());
-            }
-        } catch (SignatureException | io.jsonwebtoken.ExpiredJwtException e) {
-            // Token is invalid or expired
-            return unauthorizedTokenResponse();
-        } catch (IOException e) {
-            return ResponseEntity.status(500).body(e.getMessage());
-        }
+        return forwardToMaximo("MATUSETRANSAPI", token, reqBody);
     }
 
-    /**
-     * 
-     * @param user
-     * @return
-     */
     @PostMapping("/ASSETAPI")
     public ResponseEntity<?> AssetApi(@RequestHeader("Authorization") String token, @RequestBody String reqBody) {
-        try {
-            Jws<Claims> claims = parseToken(token);
-            claims.getSignature();
-
-            // Create the request body with JSON content
-            okhttp3.RequestBody body = okhttp3.RequestBody.create(
-                    MediaType.parse("application/json"),
-                    reqBody);
-
-            // Build the request
-            Request request = createMaximoRequest("ASSETAPI", body);
-
-            // Execute the request
-            Response response = httpClient.newCall(request).execute();
-
-            if (response.isSuccessful()) {
-                return ResponseEntity.ok(response.body().string());
-            } else {
-                // Return an error message if the request failed
-                return ResponseEntity.status(response.code())
-                        .body(response.body().string());
-            }
-        } catch (SignatureException | io.jsonwebtoken.ExpiredJwtException e) {
-            // Token is invalid or expired
-            return unauthorizedTokenResponse();
-        } catch (IOException e) {
-            return ResponseEntity.status(500).body(e.getMessage());
-        }
+        return forwardToMaximo("ASSETAPI", token, reqBody);
     }
 
-    /**
-     * 
-     * @param user
-     * @return
-     */
     @PostMapping("/INVENTORYAPI")
     public ResponseEntity<?> InventoryApi(@RequestHeader("Authorization") String token, @RequestBody String reqBody) {
-        try {
-            Jws<Claims> claims = parseToken(token);
-            claims.getSignature();
-
-            // Create the request body with JSON content
-            okhttp3.RequestBody body = okhttp3.RequestBody.create(
-                    MediaType.parse("application/json"),
-                    reqBody);
-
-            // Build the request
-            Request request = createMaximoRequest("INVENTORYAPI", body);
-
-            // Execute the request
-            Response response = httpClient.newCall(request).execute();
-
-            if (response.isSuccessful()) {
-                return ResponseEntity.ok(response.body().string());
-            } else {
-                // Return an error message if the request failed
-                return ResponseEntity.status(response.code())
-                        .body(response.body().string());
-            }
-        } catch (SignatureException | io.jsonwebtoken.ExpiredJwtException e) {
-            // Token is invalid or expired
-            return unauthorizedTokenResponse();
-        } catch (IOException e) {
-            return ResponseEntity.status(500).body(e.getMessage());
-        }
+        return forwardToMaximo("INVENTORYAPI", token, reqBody);
     }
 
-    /**
-     * 
-     * @param user
-     * @return
-     */
     @PostMapping("/POAPI")
     public ResponseEntity<?> PoApi(@RequestHeader("Authorization") String token, @RequestBody String reqBody) {
-        try {
-            Jws<Claims> claims = parseToken(token);
-            claims.getSignature();
-
-            // Create the request body with JSON content
-            okhttp3.RequestBody body = okhttp3.RequestBody.create(
-                    MediaType.parse("application/json"),
-                    reqBody);
-
-            // Build the request
-            Request request = createMaximoRequest("POAPI", body);
-
-            // Execute the request
-            Response response = httpClient.newCall(request).execute();
-
-            if (response.isSuccessful()) {
-                return ResponseEntity.ok(response.body().string());
-            } else {
-                // Return an error message if the request failed
-                return ResponseEntity.status(response.code())
-                        .body(response.body().string());
-            }
-        } catch (SignatureException | io.jsonwebtoken.ExpiredJwtException e) {
-            // Token is invalid or expired
-            return unauthorizedTokenResponse();
-        } catch (IOException e) {
-            return ResponseEntity.status(500).body(e.getMessage());
-        }
+        return forwardToMaximo("POAPI", token, reqBody);
     }
 
-    /**
-     * 
-     * @param user
-     * @return
-     */
     @PostMapping("/SERVITEMAPI")
     public ResponseEntity<?> ServItemApi(@RequestHeader("Authorization") String token, @RequestBody String reqBody) {
-        try {
-            Jws<Claims> claims = parseToken(token);
-            claims.getSignature();
-
-            // Create the request body with JSON content
-            okhttp3.RequestBody body = okhttp3.RequestBody.create(
-                    MediaType.parse("application/json"),
-                    reqBody);
-
-            // Build the request
-            Request request = createMaximoRequest("SERVITEMAPI", body);
-
-            // Execute the request
-            Response response = httpClient.newCall(request).execute();
-
-            if (response.isSuccessful()) {
-                return ResponseEntity.ok(response.body().string());
-            } else {
-                // Return an error message if the request failed
-                return ResponseEntity.status(response.code())
-                        .body(response.body().string());
-            }
-        } catch (SignatureException | io.jsonwebtoken.ExpiredJwtException e) {
-            // Token is invalid or expired
-            return unauthorizedTokenResponse();
-        } catch (IOException e) {
-            return ResponseEntity.status(500).body(e.getMessage());
-        }
+        return forwardToMaximo("SERVITEMAPI", token, reqBody);
     }
 
-    /**
-     * 
-     * @param user
-     * @return
-     */
     @PostMapping("/VENDORAPI")
     public ResponseEntity<?> VendorApi(@RequestHeader("Authorization") String token, @RequestBody String reqBody) {
-        try {
-            Jws<Claims> claims = parseToken(token);
-            claims.getSignature();
-
-            // Create the request body with JSON content
-            okhttp3.RequestBody body = okhttp3.RequestBody.create(
-                    MediaType.parse("application/json"),
-                    reqBody);
-
-            // Build the request
-            Request request = createMaximoRequest("VENDORAPI", body);
-
-            // Execute the request
-            Response response = httpClient.newCall(request).execute();
-
-            if (response.isSuccessful()) {
-                return ResponseEntity.ok(response.body().string());
-            } else {
-                // Return an error message if the request failed
-                return ResponseEntity.status(response.code())
-                        .body(response.body().string());
-            }
-        } catch (SignatureException | io.jsonwebtoken.ExpiredJwtException e) {
-            // Token is invalid or expired
-            return unauthorizedTokenResponse();
-        } catch (IOException e) {
-            return ResponseEntity.status(500).body(e.getMessage());
-        }
+        return forwardToMaximo("VENDORAPI", token, reqBody);
     }
 
-    /**
-     * 
-     * @param user
-     * @return
-     */
     @PostMapping("/VENDORP1API")
     public ResponseEntity<?> VendorP1Api(@RequestHeader("Authorization") String token, @RequestBody String reqBody) {
-        try {
-            Jws<Claims> claims = parseToken(token);
-            claims.getSignature();
-
-            // Create the request body with JSON content
-            okhttp3.RequestBody body = okhttp3.RequestBody.create(
-                    MediaType.parse("application/json"),
-                    reqBody);
-
-            // Build the request
-            Request request = createMaximoRequest("VENDORP1API", body);
-
-            // Execute the request
-            Response response = httpClient.newCall(request).execute();
-
-            if (response.isSuccessful()) {
-                return ResponseEntity.ok(response.body().string());
-            } else {
-                // Return an error message if the request failed
-                return ResponseEntity.status(response.code())
-                        .body(response.body().string());
-            }
-        } catch (SignatureException | io.jsonwebtoken.ExpiredJwtException e) {
-            // Token is invalid or expired
-            return unauthorizedTokenResponse();
-        } catch (IOException e) {
-            return ResponseEntity.status(500).body(e.getMessage());
-        }
+        return forwardToMaximo("VENDORP1API", token, reqBody);
     }
 
-    /**
-     * 
-     * @param user
-     * @return
-     */
     @PostMapping("/ITEMSERVP1API")
     public ResponseEntity<?> ItemServP1Api(@RequestHeader("Authorization") String token, @RequestBody String reqBody) {
-        try {
-            Jws<Claims> claims = parseToken(token);
-            claims.getSignature();
-
-            // Create the request body with JSON content
-            okhttp3.RequestBody body = okhttp3.RequestBody.create(
-                    MediaType.parse("application/json"),
-                    reqBody);
-
-            // Build the request
-            Request request = createMaximoRequest("ITEMSERVP1API", body);
-
-            // Execute the request
-            Response response = httpClient.newCall(request).execute();
-
-            if (response.isSuccessful()) {
-                return ResponseEntity.ok(response.body().string());
-            } else {
-                // Return an error message if the request failed
-                return ResponseEntity.status(response.code())
-                        .body(response.body().string());
-            }
-        } catch (SignatureException | io.jsonwebtoken.ExpiredJwtException e) {
-            // Token is invalid or expired
-            return unauthorizedTokenResponse();
-        } catch (IOException e) {
-            return ResponseEntity.status(500).body(e.getMessage());
-        }
+        return forwardToMaximo("ITEMSERVP1API", token, reqBody);
     }
 
-    /**
-     * 
-     * @param user
-     * @return
-     */
     @PostMapping("/INVENTORYP1API")
     public ResponseEntity<?> InventoryP1Api(@RequestHeader("Authorization") String token, @RequestBody String reqBody) {
-        try {
-            Jws<Claims> claims = parseToken(token);
-            claims.getSignature();
-
-            // Create the request body with JSON content
-            okhttp3.RequestBody body = okhttp3.RequestBody.create(
-                    MediaType.parse("application/json"),
-                    reqBody);
-
-            // Build the request
-            Request request = createMaximoRequest("INVENTORYP1API", body);
-
-            // Execute the request
-            Response response = httpClient.newCall(request).execute();
-
-            if (response.isSuccessful()) {
-                return ResponseEntity.ok(response.body().string());
-            } else {
-                // Return an error message if the request failed
-                return ResponseEntity.status(response.code())
-                        .body(response.body().string());
-            }
-        } catch (SignatureException | io.jsonwebtoken.ExpiredJwtException e) {
-            // Token is invalid or expired
-            return unauthorizedTokenResponse();
-        } catch (IOException e) {
-            return ResponseEntity.status(500).body(e.getMessage());
-        }
+        return forwardToMaximo("INVENTORYP1API", token, reqBody);
     }
 
-    /**
-     * 
-     * @param user
-     * @return
-     */
     @PostMapping("/INVUSEP1API")
     public ResponseEntity<?> InvUseP1Api(@RequestHeader("Authorization") String token, @RequestBody String reqBody) {
-        try {
-            Jws<Claims> claims = parseToken(token);
-            claims.getSignature();
-
-            // Create the request body with JSON content
-            okhttp3.RequestBody body = okhttp3.RequestBody.create(
-                    MediaType.parse("application/json"),
-                    reqBody);
-
-            // Build the request
-            Request request = createMaximoRequest("INVUSEP1API", body);
-
-            // Execute the request
-            Response response = httpClient.newCall(request).execute();
-
-            if (response.isSuccessful()) {
-                return ResponseEntity.ok(response.body().string());
-            } else {
-                // Return an error message if the request failed
-                return ResponseEntity.status(response.code())
-                        .body(response.body().string());
-            }
-        } catch (SignatureException | io.jsonwebtoken.ExpiredJwtException e) {
-            // Token is invalid or expired
-            return unauthorizedTokenResponse();
-        } catch (IOException e) {
-            return ResponseEntity.status(500).body(e.getMessage());
-        }
+        return forwardToMaximo("INVUSEP1API", token, reqBody);
     }
 
-    /**
-     * 
-     * @param user
-     * @return
-     */
     @PostMapping("/POP1API")
     public ResponseEntity<?> PoP1Api(@RequestHeader("Authorization") String token, @RequestBody String reqBody) {
-        try {
-            Jws<Claims> claims = parseToken(token);
-            claims.getSignature();
-
-            // Create the request body with JSON content
-            okhttp3.RequestBody body = okhttp3.RequestBody.create(
-                    MediaType.parse("application/json"),
-                    reqBody);
-
-            // Build the request
-            Request request = createMaximoRequest("POP1API", body);
-
-            // Execute the request
-            Response response = httpClient.newCall(request).execute();
-
-            if (response.isSuccessful()) {
-                return ResponseEntity.ok(response.body().string());
-            } else {
-                // Return an error message if the request failed
-                return ResponseEntity.status(response.code())
-                        .body(response.body().string());
-            }
-        } catch (SignatureException | io.jsonwebtoken.ExpiredJwtException e) {
-            // Token is invalid or expired
-            return unauthorizedTokenResponse();
-        } catch (IOException e) {
-            return ResponseEntity.status(500).body(e.getMessage());
-        }
+        return forwardToMaximo("POP1API", token, reqBody);
     }
 
-    /**
-     * 
-     * @param user
-     * @return
-     */
     @PostMapping("/PERSONAPI")
     public ResponseEntity<?> PersonApi(@RequestHeader("Authorization") String token, @RequestBody String reqBody) {
-        try {
-            Jws<Claims> claims = parseToken(token);
-            claims.getSignature();
-
-            // Create the request body with JSON content
-            okhttp3.RequestBody body = okhttp3.RequestBody.create(
-                    MediaType.parse("application/json"),
-                    reqBody);
-
-            // Build the request
-            Request request = createMaximoRequest("PERSONAPI", body);
-
-            // Execute the request
-            Response response = httpClient.newCall(request).execute();
-
-            if (response.isSuccessful()) {
-                return ResponseEntity.ok(response.body().string());
-            } else {
-                // Return an error message if the request failed
-                return ResponseEntity.status(response.code())
-                        .body(response.body().string());
-            }
-        } catch (SignatureException | io.jsonwebtoken.ExpiredJwtException e) {
-            // Token is invalid or expired
-            return unauthorizedTokenResponse();
-        } catch (IOException e) {
-            return ResponseEntity.status(500).body(e.getMessage());
-        }
+        return forwardToMaximo("PERSONAPI", token, reqBody);
     }
 
-    /**
-     * 
-     * @param user
-     * @return
-     */
     @PostMapping("/SHIFTAPI")
     public ResponseEntity<?> ShiftApi(@RequestHeader("Authorization") String token, @RequestBody String reqBody) {
-        try {
-            Jws<Claims> claims = parseToken(token);
-            claims.getSignature();
-
-            // Create the request body with JSON content
-            okhttp3.RequestBody body = okhttp3.RequestBody.create(
-                    MediaType.parse("application/json"),
-                    reqBody);
-
-            // Build the request
-            Request request = createMaximoRequest("SHIFTAPI", body);
-
-            // Execute the request
-            Response response = httpClient.newCall(request).execute();
-
-            if (response.isSuccessful()) {
-                return ResponseEntity.ok(response.body().string());
-            } else {
-                // Return an error message if the request failed
-                return ResponseEntity.status(response.code())
-                        .body(response.body().string());
-            }
-        } catch (SignatureException | io.jsonwebtoken.ExpiredJwtException e) {
-            // Token is invalid or expired
-            return unauthorizedTokenResponse();
-        } catch (IOException e) {
-            return ResponseEntity.status(500).body(e.getMessage());
-        }
+        return forwardToMaximo("SHIFTAPI", token, reqBody);
     }
 
-    /**
-     * 
-     * @param user
-     * @return
-     */
     @PostMapping("/LABORSHIFTAPI")
     public ResponseEntity<?> LaborShiftApi(@RequestHeader("Authorization") String token, @RequestBody String reqBody) {
-        try {
-            Jws<Claims> claims = parseToken(token);
-            claims.getSignature();
-
-            // Create the request body with JSON content
-            okhttp3.RequestBody body = okhttp3.RequestBody.create(
-                    MediaType.parse("application/json"),
-                    reqBody);
-
-            // Build the request
-            Request request = createMaximoRequest("LABORSHIFTAPI", body);
-
-            // Execute the request
-            Response response = httpClient.newCall(request).execute();
-
-            if (response.isSuccessful()) {
-                return ResponseEntity.ok(response.body().string());
-            } else {
-                // Return an error message if the request failed
-                return ResponseEntity.status(response.code())
-                        .body(response.body().string());
-            }
-        } catch (SignatureException | io.jsonwebtoken.ExpiredJwtException e) {
-            // Token is invalid or expired
-            return unauthorizedTokenResponse();
-        } catch (IOException e) {
-            return ResponseEntity.status(500).body(e.getMessage());
-        }
+        return forwardToMaximo("LABORSHIFTAPI", token, reqBody);
     }
 
-    /**
-     * 
-     * @param user
-     * @return
-     */
     @PostMapping("/MODAVAILAPI")
     public ResponseEntity<?> ModAvailApi(@RequestHeader("Authorization") String token, @RequestBody String reqBody) {
-        try {
-            Jws<Claims> claims = parseToken(token);
-            claims.getSignature();
-
-            // Create the request body with JSON content
-            okhttp3.RequestBody body = okhttp3.RequestBody.create(
-                    MediaType.parse("application/json"),
-                    reqBody);
-
-            // Build the request
-            Request request = createMaximoRequest("MODAVAILAPI", body);
-
-            // Execute the request
-            Response response = httpClient.newCall(request).execute();
-
-            if (response.isSuccessful()) {
-                return ResponseEntity.ok(response.body().string());
-            } else {
-                // Return an error message if the request failed
-                return ResponseEntity.status(response.code())
-                        .body(response.body().string());
-            }
-        } catch (SignatureException | io.jsonwebtoken.ExpiredJwtException e) {
-            // Token is invalid or expired
-            return unauthorizedTokenResponse();
-        } catch (IOException e) {
-            return ResponseEntity.status(500).body(e.getMessage());
-        }
+        return forwardToMaximo("MODAVAILAPI", token, reqBody);
     }
 
-    /**
-     * 
-     * @param user
-     * @return
-     */
     @PostMapping("/QUALIFICATIONAPI")
-    public ResponseEntity<?> QualificationApi(@RequestHeader("Authorization") String token,
-            @RequestBody String reqBody) {
-        try {
-            Jws<Claims> claims = parseToken(token);
-            claims.getSignature();
-
-            // Create the request body with JSON content
-            okhttp3.RequestBody body = okhttp3.RequestBody.create(
-                    MediaType.parse("application/json"),
-                    reqBody);
-
-            // Build the request
-            Request request = createMaximoRequest("QUALIFICATIONAPI", body);
-
-            // Execute the request
-            Response response = httpClient.newCall(request).execute();
-
-            if (response.isSuccessful()) {
-                return ResponseEntity.ok(response.body().string());
-            } else {
-                // Return an error message if the request failed
-                return ResponseEntity.status(response.code())
-                        .body(response.body().string());
-            }
-        } catch (SignatureException | io.jsonwebtoken.ExpiredJwtException e) {
-            // Token is invalid or expired
-            return unauthorizedTokenResponse();
-        } catch (IOException e) {
-            return ResponseEntity.status(500).body(e.getMessage());
-        }
+    public ResponseEntity<?> QualificationApi(@RequestHeader("Authorization") String token, @RequestBody String reqBody) {
+        return forwardToMaximo("QUALIFICATIONAPI", token, reqBody);
     }
 
-    /**
-     * 
-     * @param user
-     * @return
-     */
     @PostMapping("/LABORQUALAPI")
     public ResponseEntity<?> LaborQualApi(@RequestHeader("Authorization") String token, @RequestBody String reqBody) {
-        try {
-            Jws<Claims> claims = parseToken(token);
-            claims.getSignature();
-
-            // Create the request body with JSON content
-            okhttp3.RequestBody body = okhttp3.RequestBody.create(
-                    MediaType.parse("application/json"),
-                    reqBody);
-
-            // Build the request
-            Request request = createMaximoRequest("LABORQUALAPI", body);
-
-            // Execute the request
-            Response response = httpClient.newCall(request).execute();
-
-            if (response.isSuccessful()) {
-                return ResponseEntity.ok(response.body().string());
-            } else {
-                // Return an error message if the request failed
-                return ResponseEntity.status(response.code())
-                        .body(response.body().string());
-            }
-        } catch (SignatureException | io.jsonwebtoken.ExpiredJwtException e) {
-            // Token is invalid or expired
-            return unauthorizedTokenResponse();
-        } catch (IOException e) {
-            return ResponseEntity.status(500).body(e.getMessage());
-        }
+        return forwardToMaximo("LABORQUALAPI", token, reqBody);
     }
 
-    /**
-     * 
-     * @param user
-     * @return
-     */
     @PostMapping("/LABORCERTAPI")
     public ResponseEntity<?> LaborCertApi(@RequestHeader("Authorization") String token, @RequestBody String reqBody) {
-        try {
-            Jws<Claims> claims = parseToken(token);
-            claims.getSignature();
-
-            // Create the request body with JSON content
-            okhttp3.RequestBody body = okhttp3.RequestBody.create(
-                    MediaType.parse("application/json"),
-                    reqBody);
-
-            // Build the request
-            Request request = createMaximoRequest("LABORCERTAPI", body);
-
-            // Execute the request
-            Response response = httpClient.newCall(request).execute();
-
-            if (response.isSuccessful()) {
-                return ResponseEntity.ok(response.body().string());
-            } else {
-                // Return an error message if the request failed
-                return ResponseEntity.status(response.code())
-                        .body(response.body().string());
-            }
-        } catch (SignatureException | io.jsonwebtoken.ExpiredJwtException e) {
-            // Token is invalid or expired
-            return unauthorizedTokenResponse();
-        } catch (IOException e) {
-            return ResponseEntity.status(500).body(e.getMessage());
-        }
+        return forwardToMaximo("LABORCERTAPI", token, reqBody);
     }
 
-    /**
-     * 
-     * @param user
-     * @return
-     */
     @PostMapping("/ASSETP1API")
     public ResponseEntity<?> AssetP1Api(@RequestHeader("Authorization") String token, @RequestBody String reqBody) {
-        try {
-            Jws<Claims> claims = parseToken(token);
-            claims.getSignature();
-
-            // Create the request body with JSON content
-            okhttp3.RequestBody body = okhttp3.RequestBody.create(
-                    MediaType.parse("application/json"),
-                    reqBody);
-
-            // Build the request
-            Request request = createMaximoRequest("ASSETP1API", body);
-
-            // Execute the request
-            Response response = httpClient.newCall(request).execute();
-
-            if (response.isSuccessful()) {
-                return ResponseEntity.ok(response.body().string());
-            } else {
-                // Return an error message if the request failed
-                return ResponseEntity.status(response.code())
-                        .body(response.body().string());
-            }
-        } catch (SignatureException | io.jsonwebtoken.ExpiredJwtException e) {
-            // Token is invalid or expired
-            return unauthorizedTokenResponse();
-        } catch (IOException e) {
-            return ResponseEntity.status(500).body(e.getMessage());
-        }
+        return forwardToMaximo("ASSETP1API", token, reqBody);
     }
 
-    /**
-     * This is used to handle the error generated from APIs
-     * 
-     * @param ex
-     * @return
-     */
+    @ExceptionHandler(InvalidTokenException.class)
+    public ResponseEntity<?> handleInvalidTokenException() {
+        return unauthorizedTokenResponse();
+    }
+
     @ExceptionHandler(RuntimeException.class)
-    public ResponseEntity<?> handleInvalidTokenException(RuntimeException ex) {
-        // Return JSON with error message
-        Map<String, String> errorResponse = new HashMap<>();
-        errorResponse.put("error", ex.getMessage());
-        return new ResponseEntity<>(errorResponse, HttpStatus.EXPECTATION_FAILED);
+    public ResponseEntity<?> handleUnexpectedRuntimeException(RuntimeException exception) {
+        LOGGER.error(
+                "event=request_processing outcome=error exception_type={}",
+                exception.getClass().getSimpleName());
+        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+                .body(errorResponse("request_failed", "The request could not be processed."));
+    }
+
+    private Jws<Claims> parseToken(String authorizationHeader) {
+        if (authorizationHeader == null || !authorizationHeader.startsWith("Bearer ")) {
+            throw new IllegalArgumentException("Bearer token is required");
+        }
+
+        String compactToken = authorizationHeader.substring(7).trim();
+        if (compactToken.isEmpty()) {
+            throw new IllegalArgumentException("Bearer token is required");
+        }
+
+        return Jwts.parser()
+                .setSigningKey(jwtKeyProvider.publicKey())
+                .parseClaimsJws(compactToken);
+    }
+
+    private ResponseEntity<String> unauthorizedTokenResponse() {
+        return ResponseEntity.status(HttpStatus.UNAUTHORIZED)
+                .body("Invalid token. You need to generate a new token.");
     }
 
     private Request createMaximoRequest(String scriptName, okhttp3.RequestBody body) {
@@ -954,21 +340,22 @@ public class TokenController {
                 .build();
     }
 
+    private static Map<String, String> errorResponse(String error, String description) {
+        Map<String, String> response = new HashMap<>();
+        response.put("error", error);
+        response.put("error_description", description);
+        return response;
+    }
+
     private static HttpUrl parseMaximoScriptBaseUrl(String configuredUrl) {
         String baseUrl = requireConfiguration("MAXIMO_SCRIPT_BASE_URL", configuredUrl);
         if (!baseUrl.endsWith("/")) {
             baseUrl += "/";
         }
 
-        HttpUrl parsedUrl;
-        try {
-            parsedUrl = HttpUrl.get(baseUrl);
-        } catch (IllegalArgumentException exception) {
-            throw new IllegalStateException("MAXIMO_SCRIPT_BASE_URL must be a valid URL", exception);
-        }
-
-        if (!"https".equalsIgnoreCase(parsedUrl.scheme())) {
-            throw new IllegalStateException("MAXIMO_SCRIPT_BASE_URL must use HTTPS");
+        HttpUrl parsedUrl = HttpUrl.parse(baseUrl);
+        if (parsedUrl == null || !"https".equalsIgnoreCase(parsedUrl.scheme())) {
+            throw new IllegalStateException("MAXIMO_SCRIPT_BASE_URL must be a valid HTTPS URL");
         }
         return parsedUrl;
     }
@@ -986,9 +373,13 @@ public class TokenController {
                 .build();
 
         return new OkHttpClient.Builder()
-                .connectionSpecs(java.util.Collections.singletonList(tlsSpec))
+                .connectionSpecs(Collections.singletonList(tlsSpec))
                 .connectTimeout(30, TimeUnit.SECONDS)
                 .readTimeout(30, TimeUnit.SECONDS)
                 .build();
+    }
+
+    private static final class InvalidTokenException extends RuntimeException {
+        private static final long serialVersionUID = 1L;
     }
 }
